<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>edge_compute_demo</name>
  <version>0.0.1</version>
  <description>A collection of utilities to demonstrate edge compute scenarios</description>
  <maintainer email="sean@seankelly.dev">Sean Kelly</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>ifm3d_ros2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
